--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "react": "16.2",
     "react-dom": "16.2",
-    "react-redux": "^5.0.6",
-    "redux": "^3.7.2"
+    "react-redux": "5.1.0",
+    "redux": "3.7.2"
   },
   "scripts": {
     "start": "webpack-dev-server --mode development",
